# ChangeLog for x11-libs/libXvMC
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.40 2008/10/03 14:29:48 cardoe Exp $

  03 Oct 2008; Doug Goldstein <cardoe@gentoo.org> libXvMC-1.0.4.ebuild:
  add app-admin/eselect-xvmc as a PDEPEND for assistance in configuring this
  library

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -libXvMC-1.0.2.ebuild:
  Clean up.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> libXvMC-1.0.4.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on mips, per #176465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable for HPPA (bug #175465).

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> libXvMC-1.0.4.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> libXvMC-1.0.4.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libXvMC-1.0.3.ebuild:
  Drop unused version.

*libXvMC-1.0.4 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXvMC-1.0.4.ebuild:
  Version bump for 7.2.  Build/dist fix only.

  01 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; libXvMC-1.0.2.ebuild,
  libXvMC-1.0.3.ebuild:
  libXext has a runtime dep on xextproto now, so we don't need to depend on it
  here.

*libXvMC-1.0.3 (29 Sep 2006)

  29 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +libXvMC-1.0.3.ebuild:
  Bump. Minor fixes.
