@@ -1,4 +1,6 @@
 DIST libXvMC-1.0.4.tar.bz2 225137 RMD160 ccb5bcb022e9596dea17213419d56e7e123c043b SHA1 e035cabb8ca61bc665746b02bf97549c253b4557 SHA256 1217825ba8d66198466ee8306d0d6d237d2dd80d0f0783c98701296791833abb
+DIST libXvMC-1.0.5.tar.bz2 256570 RMD160 948091b47dfa9e972011213cd3b34120bf8fe7a5 SHA1 153b85884f22b882cecb9fc462fe24c669a80dbd SHA256 0644c768d28343af0efe0cb09fc9e0220b8ad755642bb498a3038cee328fde7f
 EBUILD libXvMC-1.0.4.ebuild 587 RMD160 81dfa730137f96043ac3892cbb8b1499bc8c1b8f SHA1 23196d5f987d880c237f1bf6f58b8eb9e6cc81f2 SHA256 e79c1f318a597b67b629516718c4312fce4632c2b7ae28f984cbe8bc7aede4a1
-MISC ChangeLog 5068 RMD160 3a263b3e6d1af41f5600aabea99f743981deccee SHA1 7f3ccec91fd02c0aecf607d5a12f4efc64dfa191 SHA256 96cd23203086477d850b6fa916e626664117514baea69c5305d4e9751a14f29e
+EBUILD libXvMC-1.0.5.ebuild 586 RMD160 2910eb519dd9d3885ec818b20304542c989a9590 SHA1 1cbc4e27c3103ce9c5985ff79aeaa37db296fc9a SHA256 50ff61ff232812bf578a4b51fe762f04845210416b02fe6a9addf26ce97ea3c8
+MISC ChangeLog 5198 RMD160 1479d0424b36eae1ae8ee77599385e6fec613db5 SHA1 1030d577a399c0788b580b6bb2442b9f3c4eebad SHA256 6e5e978c6305d1256a06bb2728c87f1380fc9e955f71dc6cd5bea4ad32e67391
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
