@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libXvMC
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.40 2008/10/03 14:29:48 cardoe Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.41 2009/10/12 20:01:26 scarabeus Exp $
+
+*libXvMC-1.0.5 (12 Oct 2009)
+
+  12 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +libXvMC-1.0.5.ebuild:
+  Version bump.
 
   03 Oct 2008; Doug Goldstein <cardoe@gentoo.org> libXvMC-1.0.4.ebuild:
   add app-admin/eselect-xvmc as a PDEPEND for assistance in configuring this
